Usecase Full Flow
